EXTRA_DIST = ./R/stats_lat.R ./R/stats_thr.R ../helpers/files.hpp\
	./tcp/local_thr.cpp ./tcp/remote_thr.cpp ./tcp/local_lat.cpp \
	./tcp/remote_lat.cpp ./tcp/test.hpp \
	./ysuite/ypipe_lat.cpp ./ysuite/ypipe_thr.cpp ./ysuite/test.hpp \
	./zmq/local_thr.cpp ./zmq/remote_thr.cpp ./zmq/local_lat.cpp \
	./zmq/remote_lat.cpp ./zmq/test.hpp

SUBDIRS = zmq_vs_tcp
